feat: phase 0.5 infra (#21)

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@ frontend/node_modules/
 frontend/dist/
 frontend/.vite/
 
+# Test artifacts
+test-results/
+playwright-report/
+
 # Local data / artifacts
 data/
 release/
