--- a/package.json
+++ b/package.json
@@ -18,20 +18,27 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.25.0",
     "better-sqlite3": "^11.0.0",
+    "electron-updater": "^6.7.3",
+    "html-to-docx": "^1.8.0",
+    "i18next": "^25.7.4",
     "lucide-react": "^0.400.0",
+    "markdown-it": "^14.1.0",
     "node-llama-cpp": "^3.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^16.5.3",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
     "@playwright/test": "^1.57.0",
+    "@testing-library/react": "^16.3.2",
     "@types/better-sqlite3": "^7.6.10",
+    "@types/markdown-it": "^14.1.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "@testing-library/react": "^16.3.2",
+    "adm-zip": "^0.5.16",
     "autoprefixer": "^10.4.19",
     "better-sqlite3-node": "npm:better-sqlite3@^11.0.0",
     "concurrently": "^8.2.2",
@@ -46,7 +53,7 @@
     "tailwindcss": "^4.0.0",
     "typescript": "^5.5.0",
     "typescript-eslint": "^8.53.0",
-    "vitest": "^4.0.17",
-    "vite": "^5.3.0"
+    "vite": "^5.3.0",
+    "vitest": "^4.0.17"
   }
 }
