--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tiptap/markdown": "^3.15.3",
     "@tiptap/react": "^3.15.3",
     "@tiptap/starter-kit": "^3.15.3",
+    "@xenova/transformers": "^2.17.2",
     "better-sqlite3": "^11.0.0",
     "electron-updater": "^6.7.3",
     "html-to-docx": "^1.8.0",
@@ -31,6 +32,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^16.5.3",
+    "sqlite-vec": "^0.1.7-alpha.2",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
