--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Install deps
         run: npm ci
 
+      - name: IPC contract check
+        run: npm run contract:check
+
       - name: Lint
         run: npm run lint
 
