--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tiptap/starter-kit": "^3.15.3",
     "@xenova/transformers": "^2.17.2",
     "better-sqlite3": "^11.0.0",
+    "cmdk": "^1.1.1",
     "electron-updater": "^6.7.3",
     "html-to-docx": "^1.8.0",
     "i18next": "^25.7.4",
