--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint src",
+    "lint": "eslint src && node scripts/style-guard.js",
     "test": "vitest",
     "test:coverage": "vitest --coverage",
     "test:e2e": "npm run electron:rebuild && npm run build && playwright test",
@@ -29,12 +29,19 @@
     "electron-updater": "^6.7.3",
     "html-to-docx": "^1.8.0",
     "i18next": "^25.7.4",
+    "katex": "^0.16.22",
     "lucide-react": "^0.400.0",
     "markdown-it": "^14.1.0",
+    "mermaid": "^11.12.0",
     "node-llama-cpp": "^3.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^16.5.3",
+    "react-markdown": "^10.1.0",
+    "rehype-katex": "^7.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
+    "shiki": "^3.4.2",
     "sqlite-vec": "^0.1.7-alpha.2",
     "zustand": "^5.0.10"
   },
