--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tiptap/starter-kit": "^3.15.3",
     "@xenova/transformers": "^2.17.2",
     "better-sqlite3": "^11.0.0",
+    "chokidar": "^3.6.0",
     "cmdk": "^1.1.1",
     "electron-updater": "^6.7.3",
     "html-to-docx": "^1.8.0",
@@ -43,6 +44,7 @@
     "remark-math": "^6.0.0",
     "shiki": "^3.4.2",
     "sqlite-vec": "^0.1.7-alpha.2",
+    "yaml": "^2.8.2",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
