--- a/writenow-theia/package.json
+++ b/writenow-theia/package.json
@@ -1,5 +1,6 @@
 {
   "private": true,
+  "packageManager": "yarn@1.22.22",
   "engines": {
     "yarn": ">=1.7.0 <2",
     "node": ">=18"
@@ -7,6 +8,11 @@
   "scripts": {
     "build:browser": "yarn --cwd browser-app bundle",
     "build:electron": "yarn --cwd electron-app bundle",
+    "install:win": "powershell -ExecutionPolicy Bypass -File scripts/win-msvc-env.ps1 -- yarn install",
+    "build:browser:win": "powershell -ExecutionPolicy Bypass -File scripts/win-msvc-env.ps1 -- yarn build:browser",
+    "build:electron:win": "powershell -ExecutionPolicy Bypass -File scripts/win-msvc-env.ps1 -- yarn build:electron",
+    "start:browser:win": "powershell -ExecutionPolicy Bypass -File scripts/win-msvc-env.ps1 -- yarn start:browser",
+    "start:electron:win": "powershell -ExecutionPolicy Bypass -File scripts/win-msvc-env.ps1 -- yarn start:electron",
     "prepare": "lerna run prepare",
     "postinstall": "theia check:theia-version",
     "start:browser": "yarn --cwd browser-app start",
