fix(theia): make win-msvc-env accept yarn args (#121)

--- a/writenow-theia/package.json
+++ b/writenow-theia/package.json
@@ -8,11 +8,11 @@
   "scripts": {
     "build:browser": "yarn --cwd browser-app bundle",
     "build:electron": "yarn --cwd electron-app bundle",
-    "install:win": "powershell -ExecutionPolicy Bypass -File scripts/win-msvc-env.ps1 -- yarn install",
-    "build:browser:win": "powershell -ExecutionPolicy Bypass -File scripts/win-msvc-env.ps1 -- yarn build:browser",
-    "build:electron:win": "powershell -ExecutionPolicy Bypass -File scripts/win-msvc-env.ps1 -- yarn build:electron",
-    "start:browser:win": "powershell -ExecutionPolicy Bypass -File scripts/win-msvc-env.ps1 -- yarn start:browser",
-    "start:electron:win": "powershell -ExecutionPolicy Bypass -File scripts/win-msvc-env.ps1 -- yarn start:electron",
+    "install:win": "powershell -ExecutionPolicy Bypass -File scripts/win-msvc-env.ps1 yarn install",
+    "build:browser:win": "powershell -ExecutionPolicy Bypass -File scripts/win-msvc-env.ps1 yarn build:browser",
+    "build:electron:win": "powershell -ExecutionPolicy Bypass -File scripts/win-msvc-env.ps1 yarn build:electron",
+    "start:browser:win": "powershell -ExecutionPolicy Bypass -File scripts/win-msvc-env.ps1 yarn start:browser",
+    "start:electron:win": "powershell -ExecutionPolicy Bypass -File scripts/win-msvc-env.ps1 yarn start:electron",
     "prepare": "lerna run prepare",
     "postinstall": "theia check:theia-version",
     "start:browser": "yarn --cwd browser-app start",
