--- a/.github/workflows/theia-windows-smoke.yml
+++ b/.github/workflows/theia-windows-smoke.yml
@@ -88,21 +88,30 @@ jobs:
           $stdout = Join-Path $env:RUNNER_TEMP "theia-electron.stdout.log"
           $stderr = Join-Path $env:RUNNER_TEMP "theia-electron.stderr.log"
           $proc = Start-Process -FilePath "cmd.exe" -ArgumentList @("/c","yarn","--cwd","electron-app","start") -NoNewWindow -PassThru -RedirectStandardOutput $stdout -RedirectStandardError $stderr
-          Start-Sleep -Seconds 25
-
-          Write-Host "---- electron stdout (tail) ----"
-          Get-Content $stdout -Tail 200
-
-          Write-Host "---- electron stderr (tail) ----"
-          Get-Content $stderr -Tail 200
-
-          $content = (Get-Content $stdout -Raw) + "`n" + (Get-Content $stderr -Raw)
-          if ($content -notmatch "\\[writenow-core\\] frontend started") {
-            throw "Expected frontend contribution log not found"
-          }
-
           try {
-            Stop-Process -Id $proc.Id -Force -ErrorAction SilentlyContinue
-          } catch {
-            # Ignore: process can exit early.
+            Start-Sleep -Seconds 25
+
+            Write-Host "---- electron stdout (tail) ----"
+            Get-Content $stdout -Tail 200
+
+            Write-Host "---- electron stderr (tail) ----"
+            Get-Content $stderr -Tail 200
+
+            $content = (Get-Content $stdout -Raw) + "`n" + (Get-Content $stderr -Raw)
+
+            $expectedFrontend = "[writenow-core] frontend started"
+            if (-not $content.Contains($expectedFrontend)) {
+              throw "Expected frontend contribution log not found: $expectedFrontend"
+            }
+
+            $expectedNativeSmoke = "[writenow-core] native smoke completed successfully"
+            if (-not $content.Contains($expectedNativeSmoke)) {
+              throw "Expected native smoke success log not found: $expectedNativeSmoke"
+            }
+          } finally {
+            try {
+              Stop-Process -Id $proc.Id -Force -ErrorAction SilentlyContinue
+            } catch {
+              # Ignore: process can exit early.
+            }
           }
