--- a/.github/workflows/theia-windows-smoke.yml
+++ b/.github/workflows/theia-windows-smoke.yml
@@ -72,7 +72,8 @@ jobs:
             throw
           } finally {
             try {
-              Stop-Process -Id $proc.Id -Force -ErrorAction SilentlyContinue
+              & taskkill.exe /PID $proc.Id /T /F 2>$null | Out-Null
+              Start-Sleep -Seconds 2
             } catch {
               # Ignore: process can exit early (e.g. fatal startup error).
             }
@@ -116,7 +117,8 @@ jobs:
             }
           } finally {
             try {
-              Stop-Process -Id $proc.Id -Force -ErrorAction SilentlyContinue
+              & taskkill.exe /PID $proc.Id /T /F 2>$null | Out-Null
+              Start-Sleep -Seconds 2
             } catch {
               # Ignore: process can exit early.
             }
