--- a/writenow-theia/browser-app/package.json
+++ b/writenow-theia/browser-app/package.json
@@ -6,13 +6,10 @@
     "@theia/core": "1.67.0",
     "@theia/editor": "1.67.0",
     "@theia/filesystem": "1.67.0",
-    "@theia/markers": "1.67.0",
     "@theia/messages": "1.67.0",
     "@theia/monaco": "1.67.0",
     "@theia/navigator": "1.67.0",
     "@theia/preferences": "1.67.0",
-    "@theia/process": "1.67.0",
-    "@theia/terminal": "1.67.0",
     "@theia/workspace": "1.67.0",
     "writenow-core": "0.0.0"
   },
@@ -21,7 +18,7 @@
   },
   "scripts": {
     "bundle": "yarn rebuild && theia build --mode development",
-    "rebuild": "theia rebuild:browser --cacheRoot .. --modules=node-pty,native-keymap,better-sqlite3",
+    "rebuild": "theia rebuild:browser --cacheRoot .. --modules=native-keymap,better-sqlite3",
     "start": "theia start",
     "watch": "yarn rebuild && theia build --watch --mode development"
   },
