--- a/writenow-theia/writenow-core/package.json
+++ b/writenow-theia/writenow-core/package.json
@@ -9,12 +9,23 @@
     "src"
   ],
   "dependencies": {
+    "@floating-ui/dom": "^1.0.0",
     "@theia/core": "1.67.0",
+    "@theia/filesystem": "1.67.0",
+    "@tiptap/core": "^3.15.3",
+    "@tiptap/markdown": "^3.15.3",
+    "@tiptap/pm": "^3.15.3",
+    "@tiptap/react": "^3.15.3",
+    "@tiptap/starter-kit": "^3.15.3",
     "better-sqlite3": "^12.6.2",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "sqlite-vec": "^0.1.7-alpha.2"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "rimraf": "^5.0.0",
     "typescript": "~5.4.5"
   },
