feat: add Theia JSON-RPC bridge for IPC contract (#141)

--- a/writenow-theia/writenow-core/package.json
+++ b/writenow-theia/writenow-core/package.json
@@ -33,6 +33,7 @@
     "prepare": "yarn run clean && yarn run build",
     "clean": "rimraf lib",
     "build": "tsc",
+    "rpc:smoke": "yarn run build && node scripts/rpc-smoke.cjs",
     "watch": "tsc -w"
   },
   "theiaExtensions": [
