--- a/writenow-theia/writenow-core/package.json
+++ b/writenow-theia/writenow-core/package.json
@@ -17,6 +17,7 @@
     "@tiptap/pm": "^3.15.3",
     "@tiptap/react": "^3.15.3",
     "@tiptap/starter-kit": "^3.15.3",
+    "@xenova/transformers": "^2.17.2",
     "better-sqlite3": "^12.6.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
