--- a/writenow-theia/writenow-core/package.json
+++ b/writenow-theia/writenow-core/package.json
@@ -9,6 +9,7 @@
     "src"
   ],
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.25.0",
     "@floating-ui/dom": "^1.0.0",
     "@theia/core": "1.67.0",
     "@theia/filesystem": "1.67.0",
@@ -21,7 +22,8 @@
     "better-sqlite3": "^12.6.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "sqlite-vec": "^0.1.7-alpha.2"
+    "sqlite-vec": "^0.1.7-alpha.2",
+    "yaml": "^2.8.2"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
