build: make root scripts Theia-first (#164)

--- a/package.json
+++ b/package.json
@@ -3,75 +3,20 @@
   "version": "2.0.0",
   "private": true,
   "type": "module",
-  "main": "electron/main.cjs",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint src && node scripts/style-guard.js && node scripts/i18n-guard.mjs",
-    "test": "vitest",
-    "test:coverage": "vitest --coverage",
-    "test:e2e": "npm run electron:rebuild && npm run build && playwright test",
     "contract:generate": "node scripts/ipc-contract-sync.js generate",
     "contract:check": "node scripts/ipc-contract-sync.js check",
-    "electron:rebuild": "electron-builder install-app-deps",
-    "electron:dev": "npm run electron:rebuild && concurrently \"vite\" \"NODE_ENV=development electron .\"",
-    "electron:build": "vite build && electron-builder"
+    "theia:setup": "corepack enable && corepack prepare yarn@1.22.22 --activate",
+    "theia:install": "npm run theia:setup && yarn --cwd writenow-theia install --frozen-lockfile",
+    "theia:build:browser": "npm run theia:install && yarn --cwd writenow-theia build:browser",
+    "theia:build:electron": "npm run theia:install && yarn --cwd writenow-theia build:electron",
+    "theia:start:browser": "npm run theia:install && yarn --cwd writenow-theia start:browser",
+    "theia:start:electron": "npm run theia:install && yarn --cwd writenow-theia start:electron",
+    "lint": "npm run contract:check && npm run theia:install && yarn --cwd writenow-theia/writenow-core build",
+    "dev": "npm run theia:start:browser",
+    "build": "npm run theia:build:browser",
+    "build:electron": "npm run theia:build:electron"
   },
-  "dependencies": {
-    "@anthropic-ai/sdk": "^0.25.0",
-    "@tiptap/extension-placeholder": "^3.15.3",
-    "@tiptap/markdown": "^3.15.3",
-    "@tiptap/react": "^3.15.3",
-    "@tiptap/starter-kit": "^3.15.3",
-    "@xenova/transformers": "^2.17.2",
-    "better-sqlite3": "^11.0.0",
-    "chokidar": "^3.6.0",
-    "cmdk": "^1.1.1",
-    "electron-updater": "^6.7.3",
-    "html-to-docx": "^1.8.0",
-    "i18next": "^25.7.4",
-    "katex": "^0.16.22",
-    "lucide-react": "^0.400.0",
-    "markdown-it": "^14.1.0",
-    "mermaid": "^11.12.0",
-    "node-llama-cpp": "^3.15.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-i18next": "^16.5.3",
-    "react-markdown": "^10.1.0",
-    "rehype-katex": "^7.0.1",
-    "remark-gfm": "^4.0.1",
-    "remark-math": "^6.0.0",
-    "shiki": "^3.4.2",
-    "sqlite-vec": "^0.1.7-alpha.2",
-    "yaml": "^2.8.2",
-    "zustand": "^5.0.10"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.39.2",
-    "@playwright/test": "^1.57.0",
-    "@testing-library/react": "^16.3.2",
-    "@types/better-sqlite3": "^7.6.10",
-    "@types/markdown-it": "^14.1.2",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "adm-zip": "^0.5.16",
-    "autoprefixer": "^10.4.19",
-    "better-sqlite3-node": "npm:better-sqlite3@^11.0.0",
-    "concurrently": "^8.2.2",
-    "electron": "^31.0.0",
-    "electron-builder": "^24.13.3",
-    "eslint": "^9.0.0",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.26",
-    "globals": "^17.0.0",
-    "jsdom": "^27.4.0",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^4.0.0",
-    "typescript": "^5.5.0",
-    "typescript-eslint": "^8.53.0",
-    "vite": "^5.3.0",
-    "vitest": "^4.0.17"
-  }
+  "dependencies": {},
+  "devDependencies": {}
 }
