--- a/.github/workflows/merge-serial.yml
+++ b/.github/workflows/merge-serial.yml
@@ -22,6 +22,9 @@ jobs:
           node-version: "20"
           cache: npm
 
+      - name: Install Linux build deps (native-keymap)
+        run: sudo apt-get update && sudo apt-get install -y pkg-config libx11-dev libxkbfile-dev
+
       - name: OpenSpec validate (strict)
         run: npx -y @fission-ai/openspec@0.17.2 validate --specs --strict --no-interactive
 
