--- a/writenow-theia/writenow-core/package.json
+++ b/writenow-theia/writenow-core/package.json
@@ -35,7 +35,8 @@
   "scripts": {
     "prepare": "yarn run clean && yarn run build",
     "clean": "rimraf lib",
-    "build": "tsc",
+    "build": "tsc && yarn run copy-assets",
+    "copy-assets": "cp src/node/database/schema.sql lib/node/database/",
     "rpc:smoke": "yarn run build && node scripts/rpc-smoke.cjs",
     "watch": "tsc -w"
   },
