--- a/writenow-theia/writenow-core/package.json
+++ b/writenow-theia/writenow-core/package.json
@@ -36,7 +36,7 @@
     "prepare": "yarn run clean && yarn run build",
     "clean": "rimraf lib",
     "build": "tsc && yarn run copy-assets",
-    "copy-assets": "cp src/node/database/schema.sql lib/node/database/",
+    "copy-assets": "cp src/node/database/schema.sql lib/node/database/ && cp -r src/browser/style lib/browser/",
     "rpc:smoke": "yarn run build && node scripts/rpc-smoke.cjs",
     "watch": "tsc -w"
   },
