--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,18 +18,10 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    "types": [
-      "react",
-      "react-dom",
-      "node",
-      "vite/client",
-      "vitest/globals"
-    ]
+    "noFallthroughCasesInSwitch": true
   },
   "include": [
-    "src",
-    "electron"
+    "src"
   ],
   "exclude": [
     "node_modules"
