feat(frontend-v2): implement TipTap editor + autosave + export (P2) (#223)

--- a/writenow-frontend/package.json
+++ b/writenow-frontend/package.json
@@ -21,6 +21,23 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@tiptap/core": "^3.17.1",
+    "@tiptap/extension-character-count": "^3.17.1",
+    "@tiptap/extension-image": "^3.17.1",
+    "@tiptap/extension-link": "^3.17.1",
+    "@tiptap/extension-placeholder": "^3.17.1",
+    "@tiptap/extension-table": "^3.17.1",
+    "@tiptap/extension-table-cell": "^3.17.1",
+    "@tiptap/extension-table-header": "^3.17.1",
+    "@tiptap/extension-table-row": "^3.17.1",
+    "@tiptap/extension-task-item": "^3.17.1",
+    "@tiptap/extension-task-list": "^3.17.1",
+    "@tiptap/extension-text-align": "^3.17.1",
+    "@tiptap/extension-underline": "^3.17.1",
+    "@tiptap/markdown": "^3.17.1",
+    "@tiptap/pm": "^3.17.1",
+    "@tiptap/react": "^3.17.1",
+    "@tiptap/starter-kit": "^3.17.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "flexlayout-react": "^0.8.18",
