--- a/writenow-frontend/package.json
+++ b/writenow-frontend/package.json
@@ -3,11 +3,22 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "main": "dist-electron/main/index.cjs",
   "scripts": {
     "dev": "vite",
+    "dev:electron": "electron-vite dev",
     "build": "tsc -b && vite build",
+    "build:electron": "electron-vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "format": "prettier -w .",
+    "format:check": "prettier -c .",
+    "preview": "vite preview",
+    "preview:electron": "electron-vite preview",
+    "package": "electron-vite build && electron-builder --config electron-builder.json5",
+    "package:win": "electron-vite build && electron-builder --config electron-builder.json5 --win",
+    "package:mac": "electron-vite build && electron-builder --config electron-builder.json5 --mac",
+    "package:linux": "electron-vite build && electron-builder --config electron-builder.json5 --linux",
+    "test:e2e": "npm run build:electron && playwright test"
   },
   "dependencies": {
     "@radix-ui/react-context-menu": "^2.2.16",
@@ -40,11 +51,15 @@
     "@tiptap/starter-kit": "^3.17.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "diff": "^5.2.2",
     "flexlayout-react": "^0.8.18",
     "lucide-react": "^0.563.0",
     "react": "^18.3.1",
     "react-arborist": "^3.4.3",
     "react-dom": "^18.3.1",
+    "react-hotkeys-hook": "^5.2.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "vscode-jsonrpc": "^8.2.1",
@@ -53,15 +68,21 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@playwright/test": "^1.58.0",
     "@tailwindcss/vite": "^4.1.18",
+    "@types/diff": "^7.0.2",
     "@types/node": "^24.10.1",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^5.1.1",
+    "electron": "^34.5.8",
+    "electron-builder": "^26.4.0",
+    "electron-vite": "^3.1.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "prettier": "^3.8.1",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^6.0.0"
