--- a/writenow-frontend/package.json
+++ b/writenow-frontend/package.json
@@ -18,6 +18,10 @@
     "package:win": "electron-vite build && electron-builder --config electron-builder.json5 --win",
     "package:mac": "electron-vite build && electron-builder --config electron-builder.json5 --mac",
     "package:linux": "electron-vite build && electron-builder --config electron-builder.json5 --linux",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
     "test:e2e": "npm run build:electron && playwright test"
   },
   "dependencies": {
@@ -70,11 +74,15 @@
     "@eslint/js": "^9.39.1",
     "@playwright/test": "^1.58.0",
     "@tailwindcss/vite": "^4.1.18",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
     "@types/diff": "^7.0.2",
     "@types/node": "^24.10.1",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^5.1.1",
+    "@vitest/coverage-v8": "^4.0.18",
+    "@vitest/ui": "^4.0.18",
     "electron": "^34.5.8",
     "electron-builder": "^26.4.0",
     "electron-vite": "^3.1.0",
@@ -82,9 +90,11 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "jsdom": "^27.4.0",
     "prettier": "^3.8.1",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
-    "vite": "^6.0.0"
+    "vite": "^6.0.0",
+    "vitest": "^4.0.18"
   }
 }
