ci: pass GITHUB_TOKEN to avoid ripgrep 403 in yarn install (#251)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,9 @@ jobs:
   ci:
     name: ci
     runs-on: ubuntu-latest
+    env:
+      # Why: @vscode/ripgrep downloads assets via GitHub API during yarn install; unauthenticated requests can hit 403 rate limits on runners.
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
