--- a/writenow-frontend/package.json
+++ b/writenow-frontend/package.json
@@ -54,6 +54,7 @@
     "diff": "^5.2.2",
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
+    "node-llama-cpp": "^3.15.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hotkeys-hook": "^5.2.3",
