[WRITE-MODE-IDE] P3-001: packaging/offline pipeline (#326)
Make packaging non-skippable (build Theia backend + verify assets) and remove Google Fonts dependency via bundled fonts.
Add bundled local model copy path + packaged smoke script and update packaging compliance notes.

--- a/writenow-frontend/.gitignore
+++ b/writenow-frontend/.gitignore
@@ -12,6 +12,10 @@ dist
 dist-ssr
 *.local
 
+# Bundled offline assets (downloaded at package time)
+resources/models/*.gguf
+resources/models/*.part
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
