--- a/writenow-frontend/package.json
+++ b/writenow-frontend/package.json
@@ -14,10 +14,11 @@
     "format:check": "prettier -c .",
     "preview": "vite preview",
     "preview:electron": "electron-vite preview",
-    "package": "electron-vite build && electron-builder --config electron-builder.json5",
-    "package:win": "electron-vite build && electron-builder --config electron-builder.json5 --win",
-    "package:mac": "electron-vite build && electron-builder --config electron-builder.json5 --mac",
-    "package:linux": "electron-vite build && electron-builder --config electron-builder.json5 --linux",
+    "package": "node scripts/prepare-packaging.mjs && electron-vite build && electron-builder --config electron-builder.json",
+    "package:win": "node scripts/prepare-packaging.mjs && electron-vite build && electron-builder --config electron-builder.json --win",
+    "package:mac": "node scripts/prepare-packaging.mjs && electron-vite build && electron-builder --config electron-builder.json --mac",
+    "package:linux": "node scripts/prepare-packaging.mjs && electron-vite build && electron-builder --config electron-builder.json --linux",
+    "package:smoke": "node scripts/smoke-packaged.mjs",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
@@ -25,6 +26,8 @@
     "test:e2e": "npm run build:electron && playwright test"
   },
   "dependencies": {
+    "@fontsource-variable/inter": "^5.2.8",
+    "@fontsource-variable/noto-serif-sc": "^5.2.10",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-popover": "^1.1.15",
