--- a/writenow-frontend/package.json
+++ b/writenow-frontend/package.json
@@ -56,11 +56,13 @@
     "cmdk": "^1.1.1",
     "diff": "^5.2.2",
     "framer-motion": "^12.29.2",
+    "i18next": "^25.8.0",
     "lucide-react": "^0.563.0",
     "node-llama-cpp": "^3.15.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hotkeys-hook": "^5.2.3",
+    "react-i18next": "^16.5.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "vscode-jsonrpc": "^8.2.1",
