fix(e2e): resolve responsive breakpoint causing sidebar not to render
Why: PR #349 introduced responsive breakpoint logic that hides the
sidebar in mobile mode. On CI with xvfb, window.innerWidth can be 0
during Electron startup, incorrectly triggering mobile mode and
breaking E2E tests that rely on the inline sidebar.

Changes:
1. useBreakpoint: Default to tablet breakpoint when window.innerWidth
   is 0 or undefined during initialization
2. e2e-perf.yml: Set xvfb resolution to 1920x1080x24 to ensure the
   app window (1400x900) fits within the virtual screen
3. e2e-write-mode.yml: Same xvfb resolution fix

This should resolve the e2e-perf and e2e-write-mode failures that
appeared after merging #349.

--- a/.github/workflows/e2e-perf.yml
+++ b/.github/workflows/e2e-perf.yml
@@ -51,7 +51,9 @@ jobs:
 
       - name: Run perf E2E
         working-directory: writenow-frontend
-        run: xvfb-run -a npx playwright test tests/e2e/perf
+        # Why: Set 1920x1080 resolution to ensure the app window (1400x900) fits within the virtual screen.
+        # Default xvfb resolution may cause responsive breakpoint issues.
+        run: xvfb-run -a -s "-screen 0 1920x1080x24" npx playwright test tests/e2e/perf
 
       - name: Upload Playwright artifacts
         if: failure()
