--- a/writenow-ui/tsconfig.json
+++ b/writenow-ui/tsconfig.json
@@ -26,7 +26,8 @@
     /* 额外检查 */
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "exactOptionalPropertyTypes": true,
+    // Note: exactOptionalPropertyTypes disabled for Radix UI compatibility
+    // "exactOptionalPropertyTypes": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedIndexedAccess": true,
